cmake_minimum_required(VERSION 3.22)
project(data_structure)
set(CMAKE_CXX_STANDARD 11)
add_executable(kmp kmp.cc)
add_executable(minSubArray minSubArray.cc)
add_executable(CharacterCount CharacterCount.c)
add_executable(MoveLaToLb MoveLaToLb.c)
add_executable(evalRPN evalRPN.cpp)
add_executable(LRUCache LRUCache.cpp)
add_executable(LongestSubstr LongestSubstr.cpp)
add_executable(InvertTree InvertTree.cpp)
add_executable(fib fib.cpp)
add_executable(climbStairs climbStairs.cpp)
add_executable(BuildTree BuildTree.cpp)
add_executable(UniquePaths UniquePaths.cpp)
add_executable(ls ls.c)
add_executable(hIndex hIndex.cpp)
add_executable(preOrderLayer preOrderLayer.c)
